News
====

Pyclewn 2.3
-----------

.. March 19, 2016

New feature
^^^^^^^^^^^

* A dynamic watch variable, for example an STL container, is now displayed
  using the enabled gdb pretty printers.

Bug fixes
^^^^^^^^^

* Issue #41: Fix the 'define', 'commands' and 'document' gdb commands
  (regression).

* Issue #42: The 'python' gdb command can also be used now as a multi-line
  command.

* Issue #43: The 'shell' gdb command is an illegal command as already stated
  in the documentation.

* Fix the following exception upon starting with python3.6:
  ``in create_server: sock.bind(sa): TypeError: an integer is required (got
  type str)``.

* Issue #46: Fix an exception caused by the incorrect parsing of the output of
  the ``-thread-info`` gdb/mi command.

* Issue #47: Loading the list of source file names may be very slow for large
  libraries with debugging symbols. Only load the list of source file names
  upon running a ``file``-like gdb command or when a library is being loaded.
  Previously, this list was instead loaded on ``file``-like and ``break``-like
  gdb commands.

Pyclewn 2.2
-----------

.. November 28, 2015

Bug fixes
^^^^^^^^^

* Issue #25: Print the return value when the inferior stops after 'finish'.

* Issue #26: Fix Pyclewn failure to start when gdb is configured with
  ``enable-targets=all``.

* Issue #27: File name completion is now available before gdb has been
  started. This fixes a regression introduced in 2.1 by the full gdb
  completion feature.

* Issue #31: Hitting <CR> in the breakpoints window now splits the first
  window of the current tab loaded with a non-clewn buffer.

* Issue #39: Prevent pip using wheel to install pyclewn on Python 2.7.

Pyclewn 2.1
-----------

.. April 3, 2015

New features
^^^^^^^^^^^^

* Full gdb completion is now available on Vim command line. See
  ``:help gdb-completion``.

* The console and the Pyclewn buffers are loaded in windows of a dedicated tab